@@ -1,5 +1,9 @@
 2022-11-30  Jacob Bachmeyer  <jcb@gnu.org>
 
+	* dejagnu.h (DG__status): New struct for test counters.
+	(passed, failed, xpassed, xfailed, untest, unresolve, unsupport):
+	Move all counters into new struct, changing all functions.
+
 	* doc/dejagnu.texi (C unit testing API): Document use of "DG_"
 	prefix in dejagnu.h and "DG__" for internal symbols.
 	(C++ unit testing API): Likewise.  Also declare namespace
